--- a/Web/course.html
+++ b/Web/course.html
@@ -35,11 +35,12 @@
     <br/>
     	<div class="row" id="contact">
 	  <div class="col-sm-5  col-sm-offset-0">
-            <img src="images/L1_data.png" width="100%"/>
+            <img src="images/gw-odw2.png" width="100%"/>
 	    </div>
 	  <div class="col-sm-7  col-sm-offset-0">
             <h2>LIGO Virgo Collaboration</h2>
 	    <h2>Gravitational-wave Open Data Workshop #2</h2>
+	    <h4>Physics dept, Paris Diderot University</h4>
 	    <h4>April 8 - 10, 2019</h4>
 	    </div>
 	</div>
@@ -67,7 +68,7 @@
 <p>
 A new astronomy based on gravitational waves was born with the first
 advanced LIGO and advanced Virgo discoveries and will develop with the
-third observation run, O3, that will begin in 2019.
+third observation run, O3, that began in April 2019.
 </p>
 
 <p>
@@ -88,8 +89,7 @@ gravitational-wave data.
 
 <p>
 The program includes a mixture of lecture style presentations and
-hands-on programming exercises. Click on Timetable in the left menu
-bar to get the list of lectures and links to the presentations.
+hands-on programming exercises.
 </p>
 
 <p>
@@ -164,15 +164,15 @@ Git repo with the material for the hands-on and challenge sessions:
 
 	    <h2>Software Setup</h2>
 
-	    <a href=''>Software Setup Page</a>
+	    Follow the <a href='https://github.com/gw-odw/odw-2019/blob/master/setup.md'>software setup instructions</a>. You can also run all tutorials on a cloud platform such as Google Colab.
 	    <br/><br/>
 
 
 	    <hr/>
 	    <h2 id='videos'></h2>
 
-	    Jo van den Brand, XXX <a href='https://dcc.ligo.org/LIGO-G1800277/public'>Slides</a>
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>   
+	    Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>Slides</a>]
+<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/><hr/><br/>
 	    	    
   <br/><br/>
