--- a/Web/course.html
+++ b/Web/course.html
@@ -169,36 +169,28 @@ Git repo with the material for the hands-on and challenge sessions:
 	    <hr/>
 	    <h2 id='videos'>Lecture videos</h2>
 
-	    Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>slides</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>slides</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 <br/>
 
-	    Alan Weinstein, LIGO-Virgo data, data quality, calibration [<a href='https://dcc.ligo.org/LIGO-G1900704/public'>slides</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Alan Weinstein, LIGO-Virgo data, data quality, calibration [<a href='https://dcc.ligo.org/LIGO-G1900704/public'>slides</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/>
 
-	    Agata Trovato, Accessing and using GW open data, calibration [<a href='https://dcc.ligo.org/LIGO-G1900727/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_1'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Agata Trovato, Accessing and using GW open data, calibration [<a href='https://dcc.ligo.org/LIGO-G1900727/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_1'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/>
 
-	    Duncan McLeod, Introduction to GWpy [<a href='https://dcc.ligo.org/LIGO-G1900728/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_1'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Duncan McLeod, Introduction to GWpy [<a href='https://dcc.ligo.org/LIGO-G1900728/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_1'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/> 
 
-	    Ed Porter, Basics of compact binary searches [<a href='https://dcc.ligo.org/LIGO-G1900628/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Ed Porter, Basics of compact binary searches [<a href='https://dcc.ligo.org/LIGO-G1900628/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/> 
 
-	    Ian Harry, Searching for compact binary mergers [<a href='https://dcc.ligo.org/LIGO-G1900725/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Ian Harry, Searching for compact binary mergers [<a href='https://dcc.ligo.org/LIGO-G1900725/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/> 
 
-	    Vivien Raymond, Astrophysical parameter estimation for compact binary mergers [<a href='https://dcc.ligo.org/LIGO-G1900659/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Vivien Raymond, Astrophysical parameter estimation for compact binary mergers [<a href='https://dcc.ligo.org/LIGO-G1900659/public'>slides</a>,  <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/> 
 	    
-	    Sarah Antier,  [<a href='https://dcc.ligo.org/LIGO-G1900630/public'>slides</a>, <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>]
-<iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
+	    Sarah Antier, Sky localization and gravitational-wave alerts [<a href='https://dcc.ligo.org/LIGO-G1900630/public'>slides</a>, <a href='https://github.com/gw-odw/odw-2019/tree/master/Day_2'>tutorial</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
 	    <br/> 
 	    	    
   <br/><br/>
