add Hands-on in menu

--- a/Web/course.html
+++ b/Web/course.html
@@ -59,7 +59,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-	    <li><a href="./course.html#videos"  style='color:#fff'>Lecture Videos</a></li>   
+	    <li><a href="./course.html#videos"  style='color:#fff'>Lectures</a></li>   
+	    <li><a href="./course.html#tutorials"  style='color:#fff'>Hands-on</a></li>   
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -90,11 +91,6 @@ gravitational-wave data.
 <p>
 The program includes a mixture of lecture style presentations and
 hands-on programming exercises.
-</p>
-
-<p>
-Git repo with the material for the hands-on and challenge sessions:
-<a href='https://github.com/gw-odw/odw-2019'>https://github.com/gw-odw/odw-2019</a>.
 </p>
     
         <div class="row">
@@ -161,11 +157,18 @@ Git repo with the material for the hands-on and challenge sessions:
 	<div class="row">
 	  <div class="col-sm-9  col-sm-offset-0">
 
-	    <h2>Software Setup</h2>
+	    <h2 id='tutorials>Hands-on</h2>
+
+	    <p>
+	      Git repo with the material for the hands-on and challenge sessions:
+	      <a href='https://github.com/gw-odw/odw-2019'>https://github.com/gw-odw/odw-2019</a>.
+	    </p>
+
+	    <h3>Software Setup</h3>
 
 	    Follow the <a href='https://github.com/gw-odw/odw-2019/blob/master/setup.md'>software setup instructions</a>. You can also run all tutorials on a cloud platform such as Google Colab.
-	    <br/><br/>
 
+	    
 	    <hr/>
 	    <h2 id='videos'>Lecture videos</h2>
 
