--- a/Web/course.html
+++ b/Web/course.html
@@ -157,12 +157,9 @@ hands-on programming exercises.
 	<div class="row">
 	  <div class="col-sm-9  col-sm-offset-0">
 
-	    <h2 id='tutorials>Hands-on</h2>
-
-	    <p>
+	    <h2 id='tutorials'>Hands-on</h2>
 	      Git repo with the material for the hands-on and challenge sessions:
 	      <a href='https://github.com/gw-odw/odw-2019'>https://github.com/gw-odw/odw-2019</a>.
-	    </p>
 
 	    <h3>Software Setup</h3>
 
