--- a/Web/course.html
+++ b/Web/course.html
@@ -169,8 +169,8 @@ hands-on programming exercises.
 	    <hr/>
 	    <h2 id='videos'>Lecture videos</h2>
 
-	    Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>slides</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
-<br/>
+		  <h3>Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors</h3> 
+		  [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>slides</a>] <br/>
 		  <div class="embed-responsive embed-responsive-16by9">
 	      		<video class="embed-responsive-item" controls poster='images/1_Jo_van_den_Brand.png'> 
 			<source src="./video/1_Jo_van_den_Brand.mp4" type="video/mp4">
@@ -178,8 +178,8 @@ hands-on programming exercises.
 	    	  </div>
 		  
 
-	    Alan Weinstein, LIGO-Virgo data, data quality, calibration [<a href='https://dcc.ligo.org/LIGO-G1900704/public'>slides</a>] <iframe width="560" height="315" src="https://youtu.be/DAmr47t3z10" frameborder="0"></iframe>   
-	    <br/>
+		  <h3>Alan Weinstein, LIGO-Virgo data, data quality, calibration</h3> 
+		  [<a href='https://dcc.ligo.org/LIGO-G1900704/public'>slides</a>] <br/>
 		  <div class="embed-responsive embed-responsive-16by9">
 	      		<video class="embed-responsive-item" controls poster='images/2_Alan_Weinstein.png'> 
 			<source src="./video/2_Alan_Weinstein.mp4" type="video/mp4">
