--- a/Web/course.html
+++ b/Web/course.html
@@ -170,9 +170,9 @@ hands-on programming exercises.
 	    <h2 id='videos'>Lecture videos</h2>
 
 		  <h3>Jo van den Brand, A primer on LIGO and Virgo gravitational wave detectors</h3> 
-		  [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>slides</a>] <br/>
+		  [<a href='https://dcc.ligo.org/LIGO-G1900761/public'>Link to slides</a>] <br/>
 		  <div class="embed-responsive embed-responsive-16by9">
-	      		<video class="embed-responsive-item" controls poster='images/1_Jo_van_den_Brand.png'> 
+	      		<video class="embed-responsive-item" controls width="30%" height="30%" poster='images/1_Jo_van_den_Brand.png'> 
 			<source src="./video/1_Jo_van_den_Brand.mp4" type="video/mp4">
 	   		</video>
 	    	  </div>
